# napari-undo-redo

./: README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_undo_redo/: __init__.py  _layer_type.py  _my_logger.py  _widget.py  _widget_0.py  caretaker.py  main.py  napari.yaml  originator.py  plugin.py  state.py  utils.py
src/napari_undo_redo/_tests/: test_widget.py
src/napari_undo_redo/command/: __init__.py  add.py  base.py  delete.py  manager.py  move.py
src/napari_undo_redo/command/points/: add.py  delete.py  face_color_change.py  move.py  symbol_change.py  todo.md
src/napari_undo_redo/command/shapes/: add.py  delete.py  todo.md
