[metadata]
name = napari-undo-redo

author = Vasudha Jha
author_email = reachvasudha27@gmail.com
url = https://github.com/mapmanager/napari-undo-redo
license = GPL-3.0-only
description = A simple plugin to provide undo-redo options for napari layers
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
project_urls =
    Bug Tracker = https://github.com/mapmanager/napari-undo-redo/issues
    Documentation = https://github.com/mapmanager/napari-undo-redo#README.md
    Source Code = https://github.com/mapmanager/napari-undo-redo
    User Support = https://github.com/mapmanager/napari-undo-redo/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy
    magicgui
    qtpy


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    napari-undo-redo = napari_undo_redo:napari.yaml
