[metadata]
name = napari_undo_redo
description = A simple plugin to provide undo-redo options for napari layers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mapmanager/napari-undo-redo
author = Vasudha Jha
author_email = reachvasudha27@gmail.com
license = GPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/mapmanager/napari-undo-redo/issues
    Documentation = https://github.com/mapmanager/napari-undo-redo#README.md
    Source Code = https://github.com/mapmanager/napari-undo-redo
    User Support = https://github.com/mapmanager/napari-undo-redo/issues

[options]
packages = find:
install_requires =
    numpy
    qtpy
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-undo-redo = napari_undo_redo:napari.yaml

[options.extras_require]
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
* = *.yaml
